# mol_search

./: .gitignore  README.md  cron_job.sh  docker-compose-initiate.yaml  docker-compose.yaml  generate_database.py  get_smiles_wikidata.py  install.sh  main.py  networkx_similarity.py  processor.py  pyproject.toml  search_bad_self_scores.py  smiles_process.py
app/: Dockerfile  README.md  generate_database.py  get_smiles_wikidata.py  main.py  pyproject.toml  search_bad_self_scores.py  smiles_process.py
etc/: crontab
etc/nginx/templates/: default.conf.template
etc/nginx/templates-initiate/: default.conf.template
