[tool.poetry]
name = "molecule_search"
version = "0.1.0"
description = ""
authors = ["Jonathan Bisson <bjonnh-streamlit@bjonnh.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
rdkit = "^2023.3.2"
streamlit = "^1.25.0"
tucan = {git = "https://github.com/TUCAN-nest/TUCAN.git"}
lz4 = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
